--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                   </td>
                   <td> <!-- HTML part  -->
                     <div class="dropdown">
-                        <a href="#" class="dropbtn">asdas</a>
+                        <a href="#" class="dropbtn">HTML</a>
                         <div class="dropdown-content">
                           <a href="#">Lectures</a>
                           <a href="#">Toturials</a>
