Add padding to table cells

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
           <table>
               <tr>
                   <td> <!-- Home Icon  -->
-                    <a href="#" class="material-icons" style="color: white;">home</a>
+                    <a href="#" class="material-icons cells-padding" style="color: white;">home</a>
                   </td>
                   <td> <!-- HTML part  -->
                     <div class="dropdown">
-                        <a href="#" class="dropbtn">HTML</a>
+                        <a href="#" class="dropbtn cells-padding">HTML</a>
                         <div class="dropdown-content">
                           <a href="#">Lectures</a>
                           <a href="#">Toturials</a>
@@ -26,7 +26,7 @@
                   </td>
                   <td> <!-- CSS part  -->
                     <div class="dropdown">
-                      <a href="#" class="dropbtn">CSS</a>
+                      <a href="#" class="dropbtn cells-padding">CSS</a>
                         <div class="dropdown-content">
                           <a href="#">Lectures</a>
                           <a href="#">Toturials</a>
@@ -36,7 +36,7 @@
                   </td>
                   <td> <!-- JavaScript part  -->
                     <div class="dropdown">
-                      <a href="#" class="dropbtn">JavaScript</a>
+                      <a href="#" class="dropbtn cells-padding">JavaScript</a>
                         <div class="dropdown-content">
                           <a href="#">Lectures</a>
                           <a href="#">Toturials</a>
