--- a/index.html
+++ b/index.html
@@ -9,42 +9,32 @@
         </style>
     </head>
     <body>
-          <table>
-              <tr>
-                  <td> <!-- Home Icon  -->
-                    <a href="#" class="material-icons" style="color: white;">home</a>
-                  </td>
-                  <td> <!-- HTML part  -->
-                    <div class="dropdown">
-                        <a href="#" class="dropbtn">HTML</a>
-                        <div class="dropdown-content">
-                          <a href="#">Lectures</a>
-                          <a href="#">Toturials</a>
-                          <a href="#">Exams</a>
-                        </div>
-                      </div>
-                  </td>
-                  <td> <!-- CSS part  -->
-                    <div class="dropdown">
-                      <a href="#" class="dropbtn">CSS</a>
-                        <div class="dropdown-content">
-                          <a href="#">Lectures</a>
-                          <a href="#">Toturials</a>
-                          <a href="#">Exams</a>
-                        </div>
-                      </div>
-                  </td>
-                  <td> <!-- JavaScript part  -->
-                    <div class="dropdown">
-                      <a href="#" class="dropbtn">JavaScript</a>
-                        <div class="dropdown-content">
-                          <a href="#">Lectures</a>
-                          <a href="#">Toturials</a>
-                          <a href="#">Exams</a>
-                        </div>
-                      </div>
-                  </td>
-              </tr>
-          </table>
+      <div class="navbar">
+        <a href="#" class="material-icons" style="color: white;">home</a>
+        <div class="dropdown">
+          <button class="dropbtn">HTML</button>
+          <div class="dropdown-content">
+            <a href="#">Lectures</a>
+            <a href="#">Toturials</a>
+            <a href="#">Exams</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">CSS</button>
+          <div class="dropdown-content">
+            <a href="#">Lectures</a>
+            <a href="#">Toturials</a>
+            <a href="#">Exams</a>
+          </div>
+        </div> 
+        <div class="dropdown">
+          <button class="dropbtn">JavaScript</button>
+          <div class="dropdown-content">
+            <a href="#">Lectures</a>
+            <a href="#">Toturials</a>
+            <a href="#">Exams</a>
+          </div>
+        </div> 
+      </div>
     </body>
 </html>
