Change button to "a" tag

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> <!--for phones to be displayed better-->
         <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
@@ -11,24 +11,24 @@
     <body>
       <div class="navbar">
         <a href="#" class="material-icons" style="color: white;">home</a>
-        <div class="dropdown">
-          <button class="dropbtn">HTML</button>
+        <div class="dropdown"> <!-- HTML part-->
+          <a href="#"class="dropbtn">HTML</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
             <a href="#">Exams</a>
           </div>
         </div>
-        <div class="dropdown">
-          <button class="dropbtn">CSS</button>
+        <div class="dropdown"> <!-- CSS part-->
+          <a href="#"class="dropbtn">CSS</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
             <a href="#">Exams</a>
           </div>
         </div> 
-        <div class="dropdown">
-          <button class="dropbtn">JavaScript</button>
+        <div class="dropdown"> <!-- JavaScript part-->
+          <a href="#"class="dropbtn">JavaScript</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
