--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="navbar">
         <a href="#" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
-          <a href="#"class="dropbtn">HTML</a>
+          <a href="https://www.w3schools.com/icons/"class="dropbtn">HTML</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
