Trying back ground image

--- a/HTML home page.html
+++ b/HTML home page.html
@@ -1,18 +1,25 @@
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> <!--for phones to be displayed better-->
+        
         <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
         <style>
-            
+            .positioning{
+                width: 50%;
+                margin: auto;
+            }
+            body{
+                background-image: url("HTML background image.jpg");
+                background-repeat: repeat-y;
+            }
         </style>
     </head>
     <body>
       <div class="navbar">
         <a href="#" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
-          <a href="#"class="dropbtn">HTML</a>
+          <a href=""class="dropbtn">HTML</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
@@ -35,6 +42,13 @@
             <a href="#">Exams</a>
           </div>
         </div> 
+      </div>
+      <br>
+      <h1 class="positioning">HTML is a adijdfuiowefh</h1>
+      <div class="positioning">
+        <p>h
+            dasz
+        </p>
       </div>
     </body>
 </html>
