adding home page pic and HTML home page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
         <style>
-            
+          .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 4ch;
+            width: 25%;
+          }           
+          .HMain{ 
+            margin-bottom: 2ch;
+            margin-left: 4ch;
+            margin-right: 4ch;
+          }
         </style>
     </head>
     <body>
       <div class="navbar">
-        <a href="#" class="material-icons" style="color: white;">home</a>
+        <a href="index.html" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
-          <a href="#"class="dropbtn">HTML</a>
+          <a href="HTML home page.html"class="dropbtn">HTML</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
@@ -36,5 +47,51 @@
           </div>
         </div> 
       </div>
+      <img src="ksu1.png" alt="Paris" class="center">
+          <h2 style="text-align: center;">
+            College of Computer and Information Sciences <br> 
+            Department of Information System<br> 
+            IS424 - Web Application Development<br> 
+              First Semester 2021-22<br> <hr> 
+          </h2> 
+          <table border = "1" width = "40%" style="margin-left: auto;margin-right: auto; ">
+            
+            <thead>
+              <tr> 
+                 <th>#</th> 
+                 <th>Name</th>
+                 <th>ID</th> 
+              </tr>
+           </thead>
+           <tbody>
+            <tr>
+              <td>1</td>
+              <td>Nasser Mohammed ALabdullah</td>
+              <td>439101469</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td>Khaled Abdulrahman Almosa</td>
+              <td>439102029</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td>Nawaf Jihjah Bin Humaid</td>
+              <td>439101296</td>
+            </tr>
+          </tbody>
+
+          </table>
+          <br> 
+
+      <h3 class="HMain"> Main goal of website: </h3>
+      <ol> 
+        <li> </li>
+        <li> </li>
+        <li> </li>
+        <li> </li>
+      </ol> 
+
+
     </body>
 </html>
