--- a/HTML home page.html
+++ b/HTML home page.html
@@ -9,17 +9,18 @@
                 width: 50%;
                 margin: auto;
             }
-            body{
-                background-image: url("HTML background image.jpg");
-                background-repeat: repeat-y;
+            li{
+              color: rgb(190, 134, 13); ;
+              font-size: 18px;
+              font-weight: bold;
             }
         </style>
     </head>
     <body>
       <div class="navbar">
-        <a href="#" class="material-icons" style="color: white;">home</a>
+        <a href="index.html" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
-          <a href=""class="dropbtn">HTML</a>
+          <a href="HTML home page.html"class="dropbtn">HTML</a>
           <div class="dropdown-content">
             <a href="#">Lectures</a>
             <a href="#">Toturials</a>
@@ -44,11 +45,16 @@
         </div> 
       </div>
       <br>
-      <h1 class="positioning">HTML is a adijdfuiowefh</h1>
-      <div class="positioning">
-        <p>h
-            dasz
-        </p>
-      </div>
+      <h1 class="positioning" style="color: rgb(190, 134, 13);">HTML is the standard markup language for Web pages. 
+          It's is one of the most popular standard markup languages to create Websites.
+        <br><br>
+        Advantages of HTML is:</h1> <br>
+      <ul class="positioning">
+        <li>Easy to use and learn</li>
+        <li>HTML is free to use</li>
+        <li>HTML is supported by all Browsers</li>
+        <li>is Simple to Edit</li>
+      </ul>
+        
     </body>
 </html>
