--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
             margin-left: auto;
             margin-right: auto;
             margin-top: 4ch;
-            width: 30%;
           }           
           .HMain{ 
             margin-bottom: 2ch;
@@ -47,7 +46,7 @@
           </div>
         </div> 
       </div>
-      <img src="ksu1.png" alt="Paris" class="center">
+      <img src="ksu1.png" alt="Paris" class="center" style="width: 30%;">
           <h2 style="text-align: center;">
             College of Computer and Information Sciences <br> 
             Department of Information System<br> 
