--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             margin-left: auto;
             margin-right: auto;
             margin-top: 4ch;
+            width: 20%;
           }           
           .HMain{ 
             margin-bottom: 2ch;
@@ -46,13 +47,13 @@
           </div>
         </div> 
       </div>
-      <img src="ksu1.png" alt="Paris" class="center" style="width: 30%;">
-          <h2 style="text-align: center;">
+      <img src="ksu1.png" alt="Paris" class="center">
+          <h3 style="text-align: center;">
             College of Computer and Information Sciences <br> 
             Department of Information System<br> 
             IS424 - Web Application Development<br> 
               First Semester 2021-22<br> <hr> 
-          </h2> 
+          </h3> 
           <table border = "1" width = "40%" style="margin-left: auto;margin-right: auto; ">
             
             <thead>
