--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </div> 
       </div>
       <img src="ksu1.png" alt="Paris" class="center">
-          <h3 style="text-align: center;">
+          <p style="text-align: center; font-size: 100%;">
             College of Computer and Information Sciences <br> 
             Department of Information System<br> 
             IS424 - Web Application Development<br> 
               First Semester 2021-22<br> <hr> 
-          </h3> 
+          </p> 
           <table border = "1" width = "40%" style="margin-left: auto;margin-right: auto; ">
             
             <thead>
