--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
           </div>
         </div> 
       </div>
-      <img src="ksu1.png" alt="Paris" class="center">
+      <img src="ksu1.png" alt="Paris" class="center" style="height: auto;">
           <p style="text-align: center; font-size: 100%;">
             College of Computer and Information Sciences <br> 
             Department of Information System<br> 
             IS424 - Web Application Development<br> 
               First Semester 2021-22<br> <hr> 
           </p> 
-          <table border = "1" width = "60%" style="margin-left: auto;margin-right: auto; ">
+          <table border = "1" width = "40%" style="margin-left: auto;margin-right: auto; ">
             
             <thead>
               <tr> 
