--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            margin-top: 4ch;
-            width: 20%;
+            margin-top: 16px;
+            width: 500px;
           }           
           .HMain{ 
             margin-bottom: 2ch;
