Update HTML home page.html

--- a/HTML home page.html
+++ b/HTML home page.html
@@ -5,7 +5,7 @@
         <title>IS424 - Home Page</title>
         <style>
             .positioning{
-                width: 35%;
+                width: 50%;
                 margin-top: 10px;
                 margin: auto;
                 
@@ -19,7 +19,7 @@
             }
         </style>
     </head>
-    <body style="background-image: url('HTML background image.jpg'); background-repeat: repeat-y;">
+    <body>
       <div class="navbar">
         <a href="index.html" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
@@ -48,7 +48,7 @@
         </div> 
       </div>
       <div class="positioning">
-        <h1 style="color: rgb(0, 0, 0);">HTML is the standard markup language for Web pages. 
+        <h1 style="color: rgb(0, 0, 0); margin-left: 10px;">HTML is the standard markup language for Web pages. 
           It's is one of the most popular standard markup languages to create Websites.
         <br><br>
         Advantages of HTML is:</h1>
@@ -56,8 +56,9 @@
         <li>Easy to use and learn</li>
         <li>HTML is free to use</li>
         <li>HTML is supported by all Browsers</li>
-        <li>is Simple to Edit</li>
+        <li>HTML Simple to Edit</li>
         </ul>
+
       </div>
         
     </body>
