Update HTML home page.html

--- a/HTML home page.html
+++ b/HTML home page.html
@@ -17,8 +17,8 @@
             
             header{
               margin: auto;
-              width: 50%;
-              font-size: 50px;
+              width: 90%;
+              font-size: 300%;
             }
             img{
               margin-left: 40px;
