Background color good

--- a/HTML home page.html
+++ b/HTML home page.html
@@ -4,6 +4,18 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
         <style>
+          .navbar {
+            background-color: #c05904;
+          }
+          .navbar a:hover, .dropdown:hover .dropbtn {
+            background-color: #663b13;
+          }
+          .dropdown-content a:hover {
+            background-color: #663b13;
+          }
+          .dropdown-content {
+            background-color: #723e0e;
+          }
             .positioning{
                 width: 50%;
                 padding: 10px 0px 10px 10px;
@@ -26,9 +38,12 @@
               font-size: 150%;
               font-family: 'Open Sans Condensed', sans-serif;
             }
+            hr{
+              background-color: #a38e7d;
+            }
         </style>
     </head>
-    <body>
+    <body style="background-color: #ecae7a;">
       <div class="navbar">
         <a href="index.html" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
@@ -60,7 +75,7 @@
         <header>What is HTML ?</header>
         <img src="unnamed.jpg" alt="">
         <p>HTML is the standard markup language for Web pages. 
-          It's is one of the most popular standard markup languages to create Websites.
+          It's one of the most popular standard markup languages to create Websites.
         <br><br>
         Advantages of HTML is:</p>
         <ul>
