--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
         <style>
+          .navbar {
+            background-color: #0e4572;
+          }
+          .navbar a:hover, .dropdown:hover .dropbtn {
+            background-color: 0b2e4b;
+          }
+          .dropdown-content a:hover {
+            background-color: #0b2e4b;
+          }
+          .dropdown-content {
+            background-color: #0e4572;
+          }
+
           .center {
             display: block;
             margin-left: auto;
