Update HTML home page.html

--- a/HTML home page.html
+++ b/HTML home page.html
@@ -30,6 +30,7 @@
               margin: auto;
               width: 90%;
               font-size: 300%;
+              font-family: 'Open Sans Condensed', sans-serif;
             }
             img{
               margin-left: 40px;
