--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
             background-color: #0e4572;
           }
 
-          .center {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 16px;
-            width: 300px;
-          }           
+          .positioning{
+                width: 50%;
+                padding: 10px 0px 10px 10px;
+                margin: auto;
+            }
           .HMain{ 
             margin-bottom: 2ch;
             margin-left: 4ch;
             margin-right: 4ch;
           }
+          img{
+              margin-left: 30%;
+              width: 40%;
+            }
         </style>
     </head>
     <body>
@@ -60,7 +62,8 @@
           </div>
         </div> 
       </div>
-      <img src="ksu1.png" alt="Paris" class="center" style="height: auto;">
+      <div class="positioning">
+        <img src="ksu1.png" alt="Paris">
           <p style="text-align: center; font-size: 100%;">
             College of Computer and Information Sciences <br> 
             Department of Information System<br> 
@@ -105,6 +108,7 @@
         <li> </li>
       </ol> 
 
+      </div>
 
     </body>
 </html>
