--- a/index.html
+++ b/index.html
@@ -18,20 +18,18 @@
             background-color: #0e4572;
           }
 
-          .positioning{
-                width: 50%;
-                padding: 10px 0px 10px 10px;
-                margin: auto;
-            }
+          .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 16px;
+            width: 300px;
+          }           
           .HMain{ 
             margin-bottom: 2ch;
             margin-left: 4ch;
             margin-right: 4ch;
           }
-          img{
-              margin-left: 30%;
-              width: 40%;
-            }
         </style>
     </head>
     <body>
@@ -62,14 +60,14 @@
           </div>
         </div> 
       </div>
-      <div class="positioning">
-        <img src="ksu1.png" alt="Paris">
+      <img src="ksu1.png" alt="Paris" class="center" style="height: auto;">
           <p style="text-align: center; font-size: 100%;">
             College of Computer and Information Sciences <br> 
             Department of Information System<br> 
             IS424 - Web Application Development<br> 
-              First Semester 2021-22<br> <hr> 
+              First Semester 2021-22<br> 
           </p> 
+          <hr>
           <table border = "1" width = "40%" style="margin-left: auto;margin-right: auto; ">
             
             <thead>
@@ -108,7 +106,6 @@
         <li> </li>
       </ol> 
 
-      </div>
 
     </body>
 </html>
