--- a/HTML exams page.html
+++ b/HTML exams page.html
@@ -2,7 +2,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
-        <title>HTML home page</title>
+        <title>HTML Toturials</title>
         <style>
           .navbar {
             background-color: #c05904;
@@ -73,30 +73,7 @@
         </div> 
       </div>
       <div class="positioning">
-        <header>What is HTML ?</header>
-        <img src="html.jpg" alt="">
-        <p>HTML is the standard markup language for Web pages. 
-          It's one of the most popular standard markup languages to create Websites.
-        <br><br>
-        Advantages of HTML is:</p>
-        <ul>
-        <li>Easy to use and learn</li>
-        <li>HTML is free to use</li>
-        <li>HTML is supported by all Browsers</li>
-        <li>HTML Simple to Edit</li>
-        </ul> <br>
-        <p>
-          in King Saud University, HTML is a main language to learn in course IS424 and the first chapter of the course <br>
-          for this porpuse, we gathered some reliable resources to help you learn HTML.
-          <br> <br>
-        </p>
-        <hr>
-        <p>
-          to begin learn Lectures, please select it from the Navigation bar above or click <a href="HTML lectures page.html">here</a> <br><br>
-          to begin Toturials, please select it from the Navigation bar above or click <a href="HTML Toturials page.html">here</a> <br><br>
-          to take the Exams, please select it from the Navigation bar above or click <a href="HTML exams page.html">here</a> <br><br>
-        </p>
-        
+        <p>HTML exams</p>
       </div>
         
     </body>
