--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="dropdown"> <!-- HTML part-->
           <a href="HTML home page.html"class="dropbtn">HTML</a>
           <div class="dropdown-content">
-            <a href="#">Lectures</a>
-            <a href="#">Toturials</a>
-            <a href="#">Exams</a>
+            <a href="HTML lectures page.html">Lectures</a>
+            <a href="HTML Toturials page.html">Toturials</a>
+            <a href="HTML exams page.html">Exams</a>
           </div>
         </div>
         <div class="dropdown"> <!-- CSS part-->
