Update HTML home page.html

--- a/HTML home page.html
+++ b/HTML home page.html
@@ -74,7 +74,7 @@
       </div>
       <div class="positioning">
         <header>What is HTML ?</header>
-        <img src="html.jpg" alt="">
+        <img src="HTML.jpg" alt="">
         <p>HTML is the standard markup language for Web pages. 
           It's one of the most popular standard markup languages to create Websites.
         <br><br>
