Adding HTML lectuers and toturials content

--- a/HTML exams page.html
+++ b/HTML exams page.html
@@ -2,7 +2,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
-        <title>HTML Toturials</title>
+        <title>HTML Exams</title>
         <style>
           .navbar {
             background-color: #c05904;
@@ -56,24 +56,24 @@
           </div>
         </div>
         <div class="dropdown"> <!-- CSS part-->
-          <a href="#"class="dropbtn">CSS</a>
+          <a href="CSS home page.html"class="dropbtn">CSS</a>
           <div class="dropdown-content">
-            <a href="#">Lectures</a>
-            <a href="#">Toturials</a>
-            <a href="#">Exams</a>
+            <a href="CSS lectures page.html">Lectures</a>
+            <a href="CSS Toturials page.html">Toturials</a>
+            <a href="CSS exams page.html">Exams</a>
           </div>
         </div> 
         <div class="dropdown"> <!-- JavaScript part-->
           <a href="#"class="dropbtn">JavaScript</a>
           <div class="dropdown-content">
-            <a href="#">Lectures</a>
-            <a href="#">Toturials</a>
-            <a href="#">Exams</a>
+            <a href="JS lectures page.html">Lectures</a>
+            <a href="JS Toturials page.html">Toturials</a>
+            <a href="JS exams page.html">Exams</a>
           </div>
         </div> 
       </div>
       <div class="positioning">
-        <p>HTML exams</p>
+        <p>HTML exams</p> <!--المحتوى يبدا من هنا-->
       </div>
         
     </body>
