--- a/JS lectures page.html
+++ b/JS lectures page.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+    <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>HTML lectures</title>
@@ -56,37 +56,46 @@
           </div>
         </div> 
       </div>
-      <div class="positioning">
-        <div style=" text-align:center"> 
-          <iframe class="iframe-container" width="600" height="400" src="https://www.youtube.com/embed/qz0aGYrrlhU?autoplay=1&fs=1"></iframe>
-        </div>
-        <div style="text-align:center"> 
-        <p>
-          HTML Tutorial for Beginners - Learn HTML for a career in web development. 
-          This HTML tutorial teaches you everything you need to get started.
-        </p>
-        </div>
-        </div>
-        <div class="positioning"> 
-        <p>You will learn about:</p>
-        <ul> 
-           <li>HTML HOME</li>
-           <li>HTML Introduction</li>
-           <li>HTML Editors</li>
-           <li>HTML Basic</li>
-           <li>HTML Elements</li>
-           <li>HTML Attributes</li>
-           <li>HTML Headings</li>
-           <li>HTML Paragraphs</li>
-           <li>HTML Styles</li>
-           <li>HTML Formatting</li>
-           <li>HTML Colors</li>
-           <li>HTML Links</li>
-           <li>HTML Images</li>
-           <li>HTML Tables</li>
-           <li>HTML Lists</li>
-        </ul>
-       </div>
-     </div>
+    </div>
+    <div class="positioning">
+        <p>JavaScript lectures</p> <!--المحتوى يبدا من هنا-->
+      </div>
+    <div style=" text-align:center"> 
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/W6NZfCO5SIk?autoplay=1"></iframe>
+    </div>
+    <div style="text-align:center"> 
+    <p>
+    JavaScript Tutorial for Beginners - Learn JavaScript for a career in web development. 
+      This JavaScript tutorial teaches you everything you need to get started.
+    </p>
+  </div>
+</div>
+<div class="positioning"> 
+<p>You will learn about:</p>
+<ul> 
+    <li>JS Introduction</li>
+    <li>JS Where To</li>
+    <li>JS Output</li>
+    <li>JS Statements</li>
+    <li>JS Syntax</li>
+    <li>JS Comments</li>
+    <li>JS Variables</li>
+    <li>JS Const</li>
+    <li>JS Assignment</li>
+    <li>JS Data Types</li>
+    <li>JS Functions</li>
+    <li>JS Objects</li>
+    <li>JS Arrays</li>
+    <li>JS Booleans</li>
+    <li>JS Conditions</li>
+    <li>JS Switch</li>
+    <li>JS Loop For</li>
+    <li>JS Loop For In</li>
+    <li>JS Loop For Of</li>
+    <li>JS Loop While</li>
+    <li>JS Break</li>
+</ul>
+</div>
     </body>
+
 </html>
