--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
           </div>
         </div>
         <div class="dropdown"> <!-- CSS part-->
-          <a href="#"class="dropbtn">CSS</a>
+          <a href="CSS home page.html"class="dropbtn">CSS</a>
           <div class="dropdown-content">
-            <a href="#">Lectures</a>
-            <a href="#">Toturials</a>
-            <a href="#">Exams</a>
+            <a href="CSS lectures page.html">Lectures</a>
+            <a href="CSS Toturials page.html">Toturials</a>
+            <a href="CSS exams page.html">Exams</a>
           </div>
         </div> 
         <div class="dropdown"> <!-- JavaScript part-->
-          <a href="#"class="dropbtn">JavaScript</a>
+          <a href="JS home page.html"class="dropbtn">JavaScript</a>
           <div class="dropdown-content">
-            <a href="#">Lectures</a>
-            <a href="#">Toturials</a>
-            <a href="#">Exams</a>
+            <a href="JS lectures page.html">Lectures</a>
+            <a href="JS Toturials page.html">Toturials</a>
+            <a href="JS exams page.html">Exams</a>
           </div>
         </div> 
       </div>
