--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+    <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>HTML lectures</title>
@@ -57,36 +57,33 @@
         </div> 
       </div>
       <div class="positioning">
-        <div style=" text-align:center"> 
-          <iframe class="iframe-container" width="600" height="400" src="https://www.youtube.com/embed/qz0aGYrrlhU?autoplay=1&fs=1"></iframe>
-        </div>
-        <div style="text-align:center"> 
-        <p>
-          HTML Tutorial for Beginners - Learn HTML for a career in web development. 
-          This HTML tutorial teaches you everything you need to get started.
-        </p>
-        </div>
-        </div>
-        <div class="positioning"> 
-        <p>You will learn about:</p>
-        <ul> 
-           <li>HTML HOME</li>
-           <li>HTML Introduction</li>
-           <li>HTML Editors</li>
-           <li>HTML Basic</li>
-           <li>HTML Elements</li>
-           <li>HTML Attributes</li>
-           <li>HTML Headings</li>
-           <li>HTML Paragraphs</li>
-           <li>HTML Styles</li>
-           <li>HTML Formatting</li>
-           <li>HTML Colors</li>
-           <li>HTML Links</li>
-           <li>HTML Images</li>
-           <li>HTML Tables</li>
-           <li>HTML Lists</li>
-        </ul>
-       </div>
-     </div>
+        <p>CSS lectures</p> <!--المحتوى يبدا من هنا-->
+      </div>
+    </div>
+    <div style=" text-align:center"> 
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
+    </div>
+    <div style="text-align:center"> 
+    <p>
+      CSS Tutorial for Beginners - Learn CSS for a career in web development. 
+      This CSS tutorial teaches you everything you need to get started.
+    </p><br> 
+
+  </div>
+  <div class="positioning"> 
+  <p>You will learn about:</p>
+  <ul> 
+      <li>Coloring</li>
+      <li>Formatting</li>
+      <li>Text</li>
+      <li>Layout</li>
+      <li>Grid</li>
+      <li>Flexbox</li>
+      <li>Animations</li>
+      <li>Transitions</li>
+      <li>And more</li>
+  </ul>
+</div>
     </body>
+
 </html>
