--- a/CSS home page.html
+++ b/CSS home page.html
@@ -2,19 +2,19 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
-        <title>HTML home page</title>
+        <title>CSS home page</title>
         <style>
           .navbar {
-            background-color: #c05904;
+            background-color: #038bcf;
           }
           .navbar a:hover, .dropdown:hover .dropbtn {
-            background-color: #663b13;
+            background-color: #026ca1;
           }
           .dropdown-content a:hover {
-            background-color: #663b13;
+            background-color: #026ca1;
           }
           .dropdown-content {
-            background-color: #723e0e;
+            background-color: #038bcf;
           }
             .positioning{
                 width: 50%;
@@ -44,7 +44,7 @@
             }
         </style>
     </head>
-    <body style="background-color: #ecae7a;">
+    <body style="background-color: #79a4b9;">
       <div class="navbar">
         <a href="index.html" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
