Update CSS lectures page.html

--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -61,7 +61,7 @@
         <header>CSS lectures</header> <!--المحتوى يبدا من هنا-->
       
       <br><br>
-        <iframe width="800" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
+        <iframe width="90%" height="50%" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
     
     <p>
       CSS Tutorial for Beginners - Learn CSS for a career in web development. 
