--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -26,7 +26,7 @@
               font-family: 'Open Sans Condensed', sans-serif;
             }
             iframe{
-              margin-left: 25%;
+              margin-left: 480px;
             }
             
         </style>
@@ -64,7 +64,7 @@
       
       <br><br>
       </div>
-        <iframe width="750" height="380" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
+        <iframe width="750" height="360" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
     <div class="positioning">
     <p>
       CSS Tutorial for Beginners - Learn CSS for a career in web development. 
