--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -30,6 +30,7 @@
               max-width: 120%;
               height: 300px;
               max-height: 700px;
+              border: none;
             }
             
         </style>
