--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -26,9 +26,9 @@
               font-family: 'Open Sans Condensed', sans-serif;
             }
             iframe{
-              width: 90%;
+              min-width: 100%;
               max-width: 120%;
-              height: 300px;
+              height: 350px;
               max-height: 700px;
               border: none;
             }
