Update CSS lectures page.html

--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -57,33 +57,33 @@
         </div> 
       </div>
       <div class="positioning">
-
-        <div style=" text-align:center"> 
-          <iframe width="600" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
-        </div>
-        <div style="text-align:center"> 
-          <p>
-            CSS Tutorial for Beginners - Learn CSS for a career in web development. 
-            This CSS tutorial teaches you everything you need to get started.
-          </p><br> 
-
-         </div>
-          <div class="positioning"> 
-            <p>You will learn about:</p>
-             <ul> 
-               <li>Coloring</li>
-               <li>Formatting</li>
-                <li>Text</li>
-                  <li>Layout</li>
-              <li>Grid</li>
-              <li>Flexbox</li>
-                 <li>Animations</li>
-              <li>Transitions</li>
-              <li>And more</li>
-              </ul>
-          </div>
-
+        <p>CSS lectures</p> <!--المحتوى يبدا من هنا-->
       </div>
-    </body>
+    </div>
+    <div style=" text-align:center"> 
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
+    </div>
+    <div style="text-align:center"> 
+    <p>
+      CSS Tutorial for Beginners - Learn CSS for a career in web development. 
+      This CSS tutorial teaches you everything you need to get started.
+    </p><br> 
 
+  </div>
+  <div class="positioning"> 
+  <p>You will learn about:</p>
+  <ul> 
+      <li>Coloring</li>
+      <li>Formatting</li>
+      <li>Text</li>
+      <li>Layout</li>
+      <li>Grid</li>
+      <li>Flexbox</li>
+      <li>Animations</li>
+      <li>Transitions</li>
+      <li>And more</li>
+  </ul>
+</div>
+    </body>
+<!---->
 </html>
