--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -63,7 +63,7 @@
     <div style=" text-align:center"> 
         <iframe width="600" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
     </div>
-    <div style="text-align:center"> 
+    <div class="positioning" style="text-align:center"> 
     <p>
       CSS Tutorial for Beginners - Learn CSS for a career in web development. 
       This CSS tutorial teaches you everything you need to get started.
