Update CSS lectures page.html

--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -69,7 +69,8 @@
       This CSS tutorial teaches you everything you need to get started.
     </p><br> 
 
-  
+  </div>
+  <div class="positioning"> 
   <p>You will learn about:</p>
   <ul> 
       <li>Coloring</li>
