--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -5,16 +5,16 @@
         <title>HTML lectures</title>
         <style>
           .navbar {
-            background-color: #c05904;
+            background-color: #038bcf;
           }
           .navbar a:hover, .dropdown:hover .dropbtn {
-            background-color: #663b13;
+            background-color: #026ca1;
           }
           .dropdown-content a:hover {
-            background-color: #663b13;
+            background-color: #026ca1;
           }
           .dropdown-content {
-            background-color: #723e0e;
+            background-color: #038bcf;
           }
             .positioning{
                 width: 50%;
@@ -28,7 +28,7 @@
             
         </style>
     </head>
-    <body style="background-color: #ecae7a;">
+    <body style="background-color: #79a4b9;">
       <div class="navbar">
         <a href="index.html" class="material-icons" style="color: white;">home</a>
         <div class="dropdown"> <!-- HTML part-->
@@ -57,11 +57,11 @@
         </div> 
       </div>
       <div class="positioning">
-        <p>CSS lectures</p> <!--المحتوى يبدا من هنا-->
+        <header>CSS lectures</header> <!--المحتوى يبدا من هنا-->
       </div>
     </div>
     <div style=" text-align:center"> 
-        <iframe width="600" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?autoplay=1"></iframe>
+        <iframe width="600" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?"></iframe>
     </div>
     <div class="positioning" style="text-align:center"> 
     <p>
