Update CSS lectures page.html

--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -63,7 +63,7 @@
         <iframe width="800" height="400" src="https://www.youtube.com/embed/1Rs2ND1ryYc?"></iframe>
     
     <p>
-      CSS Tutoial for Beginners - Learn CSS for a career in web development. 
+      CSS Tutorial for Beginners - Learn CSS for a career in web development. 
       This CSS tutorial teaches you everything you need to get started.
     </p><br> 
 
