--- a/HTML lectures page.html
+++ b/HTML lectures page.html
@@ -17,7 +17,7 @@
             background-color: #723e0e;
           }
             .positioning{
-                width: 50%;
+                width: 70%;
                 padding: 10px 0px 10px 10px;
                 margin: auto;
             }
@@ -57,17 +57,15 @@
         </div> 
       </div>
       <div class="positioning">
-        <div style=" text-align:center"> 
-          <iframe class="iframe-container" width="600" height="400" src="https://www.youtube.com/embed/qz0aGYrrlhU?autoplay=1&fs=1"></iframe>
-        </div>
-        <div style="text-align:center"> 
+          <header>CSS lectures</header>
+          <br><br>
+          <iframe class="iframe-container" width="600" height="400" src="https://www.youtube.com/embed/qz0aGYrrlhU?"></iframe>
+        
         <p>
           HTML Tutorial for Beginners - Learn HTML for a career in web development. 
           This HTML tutorial teaches you everything you need to get started.
-        </p>
-        </div>
-        </div>
-        <div class="positioning"> 
+        </p> <br>
+
         <p>You will learn about:</p>
         <ul> 
            <li>HTML HOME</li>
@@ -86,7 +84,7 @@
            <li>HTML Tables</li>
            <li>HTML Lists</li>
         </ul>
-       </div>
+       
      </div>
     </body>
 </html>
