Adding JS colors

--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -2,7 +2,7 @@
     <head>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@1,300&display=swap" rel="stylesheet"> <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
-        <title>CSS lectures</title>
+        <title>CSS Lectures</title>
         <style>
           .navbar {
             background-color: #038bcf;
@@ -56,7 +56,7 @@
         </div> 
       </div>
       <div class="positioning">
-        <header>CSS lectures</header> <!--المحتوى يبدا من هنا-->
+        <header>CSS Lectures</header> <!--المحتوى يبدا من هنا-->
         <br><br>
       
         <iframe class="iframe-container" width="700" height="400"  src="https://www.youtube.com/embed/1Rs2ND1ryYc?"></iframe>
