--- a/HTML lectures page.html
+++ b/HTML lectures page.html
@@ -57,9 +57,9 @@
         </div> 
       </div>
       <div class="positioning">
-          <header>CSS lectures</header>
+          <header>HTML Lectures</header>
           <br><br>
-          <iframe class="iframe-container" width="600" height="400" src="https://www.youtube.com/embed/qz0aGYrrlhU?"></iframe>
+          <iframe class="iframe-container" width="700" height="400" src="https://www.youtube.com/embed/qz0aGYrrlhU?"></iframe>
         
         <p>
           HTML Tutorial for Beginners - Learn HTML for a career in web development. 
