--- a/JS Toturials page.html
+++ b/JS Toturials page.html
@@ -61,37 +61,19 @@
         <header>JavaScript Toturials</header> <!--المحتوى يبدا من هنا-->
         <br><br>  
      
-        <iframe class="iframe-container" width="700" height="400" src="https://www.youtube.com/embed/W6NZfCO5SIk?"></iframe>
+        <iframe class="iframe-container" width="700" height="400" src="https://www.youtube.com/embed/zxfhf-V4JFQ?"></iframe>
     
     <p>
-    JavaScript Tutorial for Beginners - Learn JavaScript for a career in web development. 
-      This JavaScript tutorial teaches you everything you need to get started.
+    This toturial about designing a simple, responsive website using HTML, CSS and JavaScript <br><br>
+    <strong>NOTE: In order to understand this toturial, we recommend you that you have basic understanding of HTML & CSS</strong>
     </p>
   
-<p>You will learn about:</p>
-<ul> 
-    <li>JS Introduction</li>
-    <li>JS Where To</li>
-    <li>JS Output</li>
-    <li>JS Statements</li>
-    <li>JS Syntax</li>
-    <li>JS Comments</li>
-    <li>JS Variables</li>
-    <li>JS Const</li>
-    <li>JS Assignment</li>
-    <li>JS Data Types</li>
-    <li>JS Functions</li>
-    <li>JS Objects</li>
-    <li>JS Arrays</li>
-    <li>JS Booleans</li>
-    <li>JS Conditions</li>
-    <li>JS Switch</li>
-    <li>JS Loop For</li>
-    <li>JS Loop For In</li>
-    <li>JS Loop For Of</li>
-    <li>JS Loop While</li>
-    <li>JS Break</li>
-</ul>
+
+<hr>
+   <br><br>
+   <a href="https://www.w3schools.com/js/default.asp" target="_blank"><header>W3Schools</header></a>
+   <img width ="700" height="400" src="W3.jpg" alt="">
+   <p>W3Schools is a website that give you a plenty of toturials about JavaScript, from small ideas and exercises to more complex ideas</p>
 </div>
     </body>
 
