--- a/JS lectures page.html
+++ b/JS lectures page.html
@@ -92,6 +92,14 @@
     <li>JS Loop While</li>
     <li>JS Break</li>
 </ul>
+<hr>
+<br><br>
+<a href="https://www.codecademy.com/catalog/language/javascript" target="_blank"><header>Code Academy</header></a>
+<img width ="700" height="400" src="CodeAcadimy-js.jpg" alt="">
+
+<p>Code Academy is a good website to learn JavaScript, it have a variety to lectures to learn and mastered JavaScript <br> 
+  you may required to sign up in order to begin your journy <br><br>
+   what makes CA a good website is that is evolves overtime to make sure it catch ups to the current technology (whether it's JS or any other language)</p>
 </div>
     </body>
 
