--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
       </ol>
       <br>
-        <p class="HMain">to begin your journy please head over to the navigation bar above or click one of the following:
+        <p class="HMain">to begin your journy please head over to the navigation bar above <br> or click one of the following:
           <button style="border-radius: 10px; background-color: #c05904;"><a style="color: black;" href="HTML home page.html">HTML </a></button>
           <button style="border-radius: 10px; background-color: #038bcf;"><a style="color: black;" href="CSS home page.html">CSS </a></button>
           <button style="border-radius: 10px; background-color: #df9d05;"><a style="color: black;" href="JS home page.html">JavaScript </a></button>
