--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> <!--for phones to be displayed better-->
-        <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
+       <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
         <style>
@@ -110,7 +109,7 @@
       <ol class="HMain"> 
         <li>Gather a reliable sources for HTML, CSS and JavaScript </li>
         <li>Make it easy to choose the right source for people to learn </li>
-        <li>Breifly explaine what the use of HTML, CSS and JavaScript</li>
+        <li>Breifly explain what the use of HTML, CSS and JavaScript</li>
         
       </ol>
       <br>
