--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
-       <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"> <!--for phones to be displayed better-->
+        <link rel="stylesheet" href="DropDown menu.css"> <!-- Link to the CSS for the drop down menu -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"> <!-- Will help us to put icons easily -->
         <title>IS424 - Home Page</title>
         <style>
