--- a/CSS lectures page.html
+++ b/CSS lectures page.html
@@ -79,6 +79,14 @@
       <li>Transitions</li>
       <li>And more</li>
   </ul>
+  <hr>
+        <br><br>
+        <a href="https://www.codecademy.com/catalog/language/html-css" target="_blank"><header>Code Academy</header></a>
+        <img width ="700" height="400" src="CodeAcadimy-js.jpg" alt="">
+        
+        <p>Code Academy is a good website to learn CSS, it have a variety to lectures to learn and mastered CSS <br> 
+          you may required to sign up in order to begin your journy <br><br>
+           what makes CA a good website is that is evolves overtime to make sure it catch ups to the current technology (whether it's JS or any other language)</p>
 </div>
     </body>
 
